demo/app/v2/02-ingressroutes-canary.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: app
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`app.meetup.containous.tech`)
      kind: Rule
      services:
      - name: app-canary
        kind: TraefikService
